force-app/main/default/objects/Contact/fields/Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue__c</fullName>
    <description>Annual company revenue. Created by CK Ext.221.</description>
    <label>Annual Revenue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$0 - $50,000</fullName>
            </value>
            <value>
                <fullName>$50,000 - $75,000</fullName>
            </value>
            <value>
                <fullName>$75,000 - $100,000</fullName>
            </value>
            <value>
                <fullName>$100,000 - $150,000</fullName>
            </value>
            <value>
                <fullName>$150,000 - $200,000</fullName>
            </value>
            <value>
                <fullName>$200,000+</fullName>
            </value>
            <value>
                <fullName>Less than $10 Million</fullName>
            </value>
            <value>
                <fullName>$10 Million - $49 Million</fullName>
            </value>
            <value>
                <fullName>$50 Million - $249 Million</fullName>
            </value>
            <value>
                <fullName>$250 Million - $999 Million</fullName>
            </value>
            <value>
                <fullName>More than $1 Billion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>