force-app/main/default/objects/Contact/fields/Average_Pageviews__c.field-meta.xml
<CustomField>
    <fullName>Average_Pageviews__c</fullName>
    <description>The average number of pages a contact sees. Created by CK Ext.221.</description>
    <label>Average Pageviews</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>