force-app/main/default/objects/Contact/fields/Became_a_Sales_Qualified_Lead_Date__c.field-meta.xml
<CustomField>
    <fullName>Became_a_Sales_Qualified_Lead_Date__c</fullName>
    <label>Became a Sales Qualified Lead Date</label>
    <type>DateTime</type>
</CustomField>