force-app/main/default/objects/Contact/fields/Canonical_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Canonical_Create_Date__c</fullName>
    <label>Canonical Create Date</label>
    <type>Date</type>
</CustomField>