force-app/main/default/objects/Contact/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <description>The date that a contact became a customer. This property is set automatically by HubSpot when a deal or opportunity is marked as closed-won. It can also be set manually or programmatically. Created by CK Ext.221.</description>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>