force-app/main/default/objects/Contact/fields/Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Company_ID__c</fullName>
    <description>The unique ID for this contact. This unique ID is automatically populated by HubSpot and cannot be changed. Created by CK Ext.221.</description>
    <externalId>true</externalId>
    <label>Company ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>