force-app/main/default/objects/Contact/fields/Contact_Owner_Integration__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_Integration__c</fullName>
    <label>Contact Owner - Integration</label>
    <length>25</length>
    <type>Text</type>
</CustomField>