force-app/main/default/objects/Contact/fields/CS_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>CS_Owner_Email__c</fullName>
    <label>CS Owner Email</label>
    <type>Email</type>
</CustomField>