force-app/main/default/objects/Contact/fields/Definitive_Healthcare_Hospital_ID__c.field-meta.xml
<CustomField>
    <fullName>Definitive_Healthcare_Hospital_ID__c</fullName>
    <description>Definitive Healthcare Hospital ID. Created by CK Ext.221.</description>
    <label>Definitive Healthcare Hospital ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>