force-app/main/default/objects/Contact/fields/Disqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Reason__c</fullName>
    <description>Holds the reason for which this contact was disqualified</description>
    <label>Disqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent to Reseller - MEP</fullName>
            </value>
            <value>
                <fullName>Partner Inquiry</fullName>
            </value>
            <value>
                <fullName>Not a Hospital/Healthcare System</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Patient</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>No Project</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
            <value>
                <fullName>Direct Competitor</fullName>
            </value>
            <value>
                <fullName>Chose a Competitor</fullName>
            </value>
            <value>
                <fullName>Reimbursement Concerns</fullName>
            </value>
            <value>
                <fullName>Product Feature Missing</fullName>
            </value>
            <value>
                <fullName>Do Not Contact</fullName>
            </value>
            <value>
                <fullName>Not a Decision Maker</fullName>
            </value>
            <value>
                <fullName>University Inquiry</fullName>
            </value>
            <value>
                <fullName>Solo-provider</fullName>
            </value>
            <value>
                <fullName>Timing 13+ Months</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>