force-app/main/default/objects/Contact/fields/Event_Source_Integration__c.field-meta.xml
<CustomField>
    <fullName>Event_Source_Integration__c</fullName>
    <label>Event Source - Integration</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>