force-app/main/default/objects/Contact/fields/Facebook_Clicks__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Clicks__c</fullName>
    <description>The number clicks on links shared on Facebook. Created by CK Ext.221.</description>
    <label>Facebook Clicks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>