force-app/main/default/objects/Contact/fields/First_Touch_Converting_Campaign__c.field-meta.xml
<CustomField>
    <fullName>First_Touch_Converting_Campaign__c</fullName>
    <description>The campaign responsible for the first touch creation of this contact. Created by CK Ext.221.</description>
    <label>First Touch Converting Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>