force-app/main/default/objects/Contact/fields/Job_function__c.field-meta.xml
<CustomField>
    <fullName>Job_function__c</fullName>
    <description>A contact&apos;s job function. This property is required for the Facebook Ads Integration. This property will be automatically synced via the Lead Ads tool. Created by CK Ext.221.</description>
    <label>Job function</label>
    <length>255</length>
    <type>Text</type>
</CustomField>