force-app/main/default/objects/Contact/fields/Latest_Source_Drill_Down_1__c.field-meta.xml
<CustomField>
    <fullName>Latest_Source_Drill_Down_1__c</fullName>
    <description>Additional information about the latest source for the last session the contact used to find your website. Set automatically. Created by CK Ext. 221</description>
    <label>Latest Source Drill-Down 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>