force-app/main/default/objects/Contact/fields/Lead_Source_Details__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Details__c</fullName>
    <description>Details of the Lead Source. Created by CK Ext.221.</description>
    <label>Lead Source Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>