force-app/main/default/objects/Contact/fields/Lead_Type_Integration__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type_Integration__c</fullName>
    <label>Lead Type - Integration</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>