force-app/main/default/objects/Contact/fields/LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn__c</fullName>
    <description>Linked in Link of the Contact. Created by CK Ext.221.</description>
    <label>LinkedIn</label>
    <type>Url</type>
</CustomField>