force-app/main/default/objects/Contact/fields/LinkedIn_Impressions_30_days__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Impressions_30_days__c</fullName>
    <description>Sum of LinkedIn Impressions. Created by CK Ext. 221</description>
    <label>LinkedIn Impressions (30 days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>