force-app/main/default/objects/Contact/fields/LinkedIn_Last_Ad_Clicked__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Last_Ad_Clicked__c</fullName>
    <description>Name of last ad clicked in LinkedIn. Created by CK Ext. 221</description>
    <label>LinkedIn Last Ad Clicked</label>
    <length>255</length>
    <type>Text</type>
</CustomField>