force-app/main/default/objects/Contact/fields/LinkedIn_URL__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_URL__c</fullName>
    <description>Link to LinkedIn page of contact. Created by CK Ext. 221</description>
    <label>LinkedIn URL</label>
    <type>Url</type>
</CustomField>