force-app/main/default/objects/Contact/fields/Marketing_Speed_to_Lead__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Speed_to_Lead__c</fullName>
    <description>Marketing speed to Lead. Created by CK Ext. 221</description>
    <label>Marketing Speed to Lead</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>