force-app/main/default/objects/Contact/fields/Mobile_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone_Number__c</fullName>
    <description>A contact&apos;s mobile phone number. Created by CK Ext.221.</description>
    <label>Mobile Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>