force-app/main/default/objects/Contact/fields/Notes_Description__c.field-meta.xml
<CustomField>
    <fullName>Notes_Description__c</fullName>
    <description>Contains Notes synced from HS</description>
    <label>Notes Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>