force-app/main/default/objects/Contact/fields/Nurture_Details_Lost_reason__c.field-meta.xml
<CustomField>
    <fullName>Nurture_Details_Lost_reason__c</fullName>
    <description>Field to get update with respect to opportunity. Created by CK Ext. 221</description>
    <label>Nurture Details / Lost reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interested in Competitor</fullName>
            </value>
            <value>
                <fullName>Contract Concerns</fullName>
            </value>
            <value>
                <fullName>No Decision</fullName>
            </value>
            <value>
                <fullName>Non-responsive/Went Dark</fullName>
            </value>
            <value>
                <fullName>Just Researching</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
                <label>Product Feature Missing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>