force-app/main/default/objects/Contact/fields/Original_Source_Drill_Down_1__c.field-meta.xml
<CustomField>
    <fullName>Original_Source_Drill_Down_1__c</fullName>
    <description>Additional information about the source through which a contact first found your website. Created by CK Ext.221.</description>
    <label>Original Source Drill-Down 1</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>