force-app/main/default/objects/Contact/fields/Owner_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Owner_Assigned_Date__c</fullName>
    <description>The most recent date a Owner was assigned to a contact. Created by CK Ext.221.</description>
    <label>Owner Assigned Date</label>
    <type>DateTime</type>
</CustomField>