force-app/main/default/objects/Contact/fields/PBA_Opt_in__c.field-meta.xml
<CustomField>
    <fullName>PBA_Opt_in__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is person in PBA program? Created by CK Ext. 221</description>
    <label>PBA Opt-in</label>
    <type>Checkbox</type>
</CustomField>