force-app/main/default/objects/Contact/fields/Person_Stage__c.field-meta.xml
<CustomField>
    <fullName>Person_Stage__c</fullName>
    <label>Person Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>