force-app/main/default/objects/Contact/fields/SDR_Owner__c.field-meta.xml
<CustomField>
    <fullName>SDR_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SDR Owner. Created by CK Ext 221.</description>
    <label>SDR Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Contacts (SDR Owner)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>