force-app/main/default/objects/Contact/fields/Sub_Primary_Industry__c.field-meta.xml
<CustomField>
    <fullName>Sub_Primary_Industry__c</fullName>
    <label>Sub Primary Industry</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>