force-app/main/default/objects/Contact/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <description>The contact’s time zone. Created by CK Ext. 221</description>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UTC -11:00 Pacific Midway</fullName>
            </value>
            <value>
                <fullName>UTC -11:00 Pacific Niue</fullName>
            </value>
            <value>
                <fullName>UTC -11:00 Pacific Pago Pago</fullName>
            </value>
            <value>
                <fullName>UTC -11:00 Pacific Samoa</fullName>
            </value>
            <value>
                <fullName>UTC -11:00 US Samoa</fullName>
            </value>
            <value>
                <fullName>UTC -10:00 Pacific Honolulu</fullName>
            </value>
            <value>
                <fullName>UTC -10:00 Pacific Johnston</fullName>
            </value>
            <value>
                <fullName>UTC -10:00 Pacific Rarotonga</fullName>
            </value>
            <value>
                <fullName>UTC -10:00 Pacific Tahiti</fullName>
            </value>
            <value>
                <fullName>UTC -10:00 US Hawaii</fullName>
            </value>
            <value>
                <fullName>UTC -09:30 Pacific Marquesas</fullName>
            </value>
            <value>
                <fullName>UTC -09:00 America Adak</fullName>
            </value>
            <value>
                <fullName>UTC -09:00 America Atka</fullName>
            </value>
            <value>
                <fullName>UTC -09:00 Pacific Gambier</fullName>
            </value>
            <value>
                <fullName>UTC -09:00 US Aleutian</fullName>
            </value>
            <value>
                <fullName>UTC -08:00 America Anchorage</fullName>
            </value>
            <value>
                <fullName>UTC -08:00 America Juneau</fullName>
            </value>
            <value>
                <fullName>UTC -08:00 America Metlakatla</fullName>
            </value>
            <value>
                <fullName>UTC -08:00 America Nome</fullName>
            </value>
            <value>
                <fullName>UTC -08:00 America Sitka</fullName>
            </value>
            <value>
                <fullName>UTC -08:00 America Yakutat</fullName>
            </value>
            <value>
                <fullName>UTC -08:00 Pacific Pitcairn</fullName>
            </value>
            <value>
                <fullName>UTC -08:00 US Alaska</fullName>
            </value>
            <value>
                <fullName>UTC -07:00 America Creston</fullName>
            </value>
            <value>
                <fullName>UTC -07:00 America Dawson</fullName>
            </value>
            <value>
                <fullName>UTC -07:00 America Dawson Creek</fullName>
            </value>
            <value>
                <fullName>UTC -07:00 America Ensenada</fullName>
            </value>
            <value>
                <fullName>UTC -07:00 America Fort Nelson</fullName>
            </value>
            <value>
                <fullName>UTC -07:00 America Hermosillo</fullName>
            </value>
            <value>
                <fullName>UTC -07:00 America Los Angeles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>