force-app/main/default/objects/Contact/fields/Unique_Identifier_Number__c.field-meta.xml
<CustomField>
    <fullName>Unique_Identifier_Number__c</fullName>
    <description>Field created to support Hubspot migration. Created by CK Ext. 221</description>
    <label>Unique Identifier Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>