force-app/main/default/objects/Contact/fields/utm_campaign__c.field-meta.xml
<CustomField>
    <fullName>utm_campaign__c</fullName>
    <description>utm_campaign. Created by CK Ext.221.</description>
    <label>utm_campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>