force-app/main/default/objects/Contact/fields/utm_content__c.field-meta.xml
<CustomField>
    <fullName>utm_content__c</fullName>
    <description>utm_content. Created by CK Ext.221.</description>
    <label>utm_content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>