force-app/main/default/objects/Contact/fields/utm_medium__c.field-meta.xml
<CustomField>
    <fullName>utm_medium__c</fullName>
    <description>utm_medium. Created by CK Ext.221.</description>
    <label>utm_medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>