force-app/main/default/objects/Contact/fields/utm_source__c.field-meta.xml
<CustomField>
    <fullName>utm_source__c</fullName>
    <description>utm_source. Created by CK Ext.221.</description>
    <label>utm_source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>