force-app/main/default/objects/Contact/fields/utm_term__c.field-meta.xml
<CustomField>
    <fullName>utm_term__c</fullName>
    <description>utm_term. Created by CK Ext.221.</description>
    <label>utm_term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>